---
source: crates/rattler_lock/src/lib.rs
expression: conda_lock
---
version: 7
platforms:
  - name: linux-64
  - name: win-64
environments:
  default:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      linux-64:
        - conda_source: "minimal-project[e7a675a0] @ ../minimal-project"
      win-64:
        - conda_source: "a-python-project[11595094] @ ../a-python-project"
        - conda_source: "b-python-project[90ada644] @ ../a-python-project"
        - conda_source: "minimal-project[52efeabc] @ ../minimal-project"
  second:
    channels:
      - url: "https://conda.anaconda.org/conda-forge/"
    packages:
      win-64:
        - conda_source: "minimal-project[aea0d364] @ ../minimal-project"
packages:
  - conda_source: "a-python-project[11595094] @ ../a-python-project"
    version: "0.1"
    build: py38
    build_number: 38
    subdir: noarch
    noarch: python
  - conda_source: "b-python-project[90ada644] @ ../a-python-project"
    version: "0.1"
    build: h398123
    build_number: 398123
    subdir: noarch
    noarch: python
  - conda_source: "minimal-project[52efeabc] @ ../minimal-project"
    version: "0.1"
    build: first
    subdir: win-64
    depends:
      - __win
  - conda_source: "minimal-project[aea0d364] @ ../minimal-project"
    version: "0.1"
    build: second
    subdir: win-64
    depends:
      - __win
  - conda_source: "minimal-project[e7a675a0] @ ../minimal-project"
    version: "0.1"
    build: first
    subdir: linux-64
    depends:
      - __unix
